--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <div class="container">
         <h1>Color Flipper</h1>
-        <button id="btn">Change Color</button>
+        <button id="btn">Flip Color</button>
         <p id="color">Current Color: #ffffff</p>
     </div>       
     <script src="script.js"></script>
 </body>
+
 </html>
